--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     }
 
     // Load 3d model
-    await loadModel("https://github.com/canstd/ijewel/blob/e5121323e73ff5ade5875137023d641bbc1759b6/scene.glb");
+    await loadModel("scene.glb");
 
     // Apply default layers
     await applyLayerConfig(defaultLayerConfig);
