--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
- <script src="https://releases.ijewel3d.com/libs/mini-viewer/0.1.0/bundle.iife.js"></script>
+ <iframe title="Test"
+  frameborder="0" 
+  allowfullscreen 
+  mozallowfullscreen="true" 
+  webkitallowfullscreen="true" 
+  xr-spatial-tracking 
+  execution-while-out-of-viewport 
+  execution-while-not-rendered web-share
+  allow="autoplay; fullscreen; xr-spatial-tracking; web-share" 
+  width="1280px" height="720px"
+  src="https://ijewel.design/embedded?slug=b34ff19"/>
   </body>
 </html>
