--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
- <iframe title="Test"
+ <iframe
   frameborder="0" 
   allowfullscreen 
   mozallowfullscreen="true" 
@@ -17,7 +17,7 @@
   xr-spatial-tracking 
   execution-while-out-of-viewport 
   execution-while-not-rendered web-share
-  allow="autoplay; fullscreen; xr-spatial-tracking; web-share" 
+  allow="autoplay; fullscreen; xr-spatial-tracking;" 
   width="1280px" height="720px"
   src="https://ijewel.design/embedded?slug=b34ff19"/>
   </body>
