--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const model =
-          "https://pixotronicscontent.s3.ap-south-1.amazonaws.com/engagementring/scene+(58).glb";
+          "scene.glb";
 
         new ijewelViewer.Viewer(
           document.getElementById("viewer-root"),
