--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           document.getElementById("viewer-root"),
           {
             modelUrl: model,
-            logo: "https://pixotronicscontent.s3.ap-south-1.amazonaws.com/engagementring/01_RADIANT+X_5.5CT_RS65.jpg",
+            logo: "",
           }, // project options
           {
             showCard: false,
