--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     </style>
   </head>
   <body>
+   
+    <div style="
+  width: 400px;       /* Kare genişliği */
+  height: 400px;      /* Kare yüksekliği */
+  border: 3px solid blue; 
+  overflow: hidden;   /* Taşan kısmı gizle */
+  position: relative; /* Mutlak konumlandırma için relative */
+  margin: 20px auto;  /* Ortalamak isterseniz (yatay) */
+">
     <div id="viewer-wrapper">
       <div id="viewer-root"></div>
     </div>
