--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   margin: 20px auto;  /* Ortalamak isterseniz (yatay) */
 ">
     <div id="viewer-wrapper">
-      <div id="viewer-root"></div>
+      <div id="viewer-root">
     </div>
 
     <script>
