--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-   
+   <div>
     <div style="
   width: 400px;       /* Kare genişliği */
   height: 400px;      /* Kare yüksekliği */
@@ -34,9 +34,9 @@
   margin: 20px auto;  /* Ortalamak isterseniz (yatay) */
 ">
     <div id="viewer-wrapper">
-      <div id="viewer-root">
+      <div id="viewer-root"></div>
     </div>
-
+    </div>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const model =
