--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    
+    viewer.scene.getObjectByName("object_name", (obj) => { obj.visible = false; });
     <!-- 3D Viewer Alanı -->
     <div id="viewer-wrapper">
         <div id="viewer-root"></div>
