--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 {
                     showCard: false,
                     showLogo: false,
+                    enableDrop: false,
                 } // viewer options
             );
 
