--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     showCard: false,
                     showLogo: false,
                     enableDrop: false,
+                    importPopup: false,
                 } // viewer options
             );
 
